# CS498-TSADAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: model_load_test.py  preload_local_models.py  query_any.sh  start_network.sh  start_ollama.sh  stop_network.sh
src/: env_config.py  local_agent.py  logging_utils.py  models.py  network_utils.py  node.py  ollama_utils.py  peer_registery.py  peer_registry.py  protocols.py  transport.py
src/cli/: client_query.py  find_nodes.py  run_node.py  send_message.py
src/services/: capability_classifier.py  capability_scorer.py  dht_service.py  health_service.py  node_api_service.py  ping_service.py  profile_service.py  pubsub_service.py  query_service.py  recommendation_service.py  routing_service.py
src/ui/: chat_app.py  web_app.py  web_state.py
src/ui/static/: app.js  index.html  style.css
