[project]
name = "cs498-tsadai"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.1",
    "libp2p>=0.6.0",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "uvicorn>=0.46.0",
]
